@@ -1,3 +1,7 @@
+* Agents, Callback Extensions: do not modify the audit or call tables from the
+  module. Now that the dialer has exclusive responsibility over auditing on 
+  logoff, modification of audit tables on forced disconnection, as allowed by
+  these modules, is actually harmful.
 * Dialer (ECCP): merge in-progress support for CallbackLogin-style agents.
   Currently the supported agents are SIP and IAX2 extensions. The agents must be
   declared at the Callback Extensions module under Call Center-->Agent Options,
